2006-01-06  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "mk" to ALL_LINGUAS.

2005-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Bump version to 2.13.0, and require libbonobo and
	bonobo-activation 2.13.0.
	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_pre_args_parse),
	(bonobo_ui_gtk_post_args_parse), (bonobo_ui_gtk_module_info_get):
	Enable GOption argument parsing in gnome_program_init.
	Patch by Pawel Sliwowski <open.list@gmail.com>, bug #307312.

2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* po/ku.po: Added Kurdish Translation

2005-08-31  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* bonobo/bonobo-selector-widget.c (get_lang_list): Use
	g_get_language_names instead of the deprecated
	gnome_i18n_get_language_list().

2005-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* Version 2.10.1: Fix up the release confusion I created.

2005-08-17  Michael Meeks  <michael.meeks@novell.com>

	* Version 2.10.0

2005-07-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	reviewed by: Michael Meeks <michael@ximian.com>

	* bonobo/bonobo-ui-sync-status.c:
	(impl_bonobo_ui_sync_status_build):
	* doc/ui-xml.txt:
	
	Add options to pack control in statusbar.

2005-03-14  Not Zed  <NotZed@Ximian.com>

	* bonobo/bonobo-ui-node.c (bonobo_ui_node_get_attr): use
	xmlStrDup, since free_string uses xmlFree.  See bug #170282.

2005-05-30  Rodrigo Moya <rodrigo@novell.com>

	* tools/browser/window.c (bonobo_browser_create_window):
	fixed widgets spacing and use stock icons where possible.

2005-05-06  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_sync): Add a check for NULL in
	g_warning.

2005-04-17  Tor Lillqvist  <tml@novell.com>

	* configure.in: Require GTK+ and GObject 2.6.

	* bonobo/Makefile.am: Add bonobo-ui-win32.c. Pass also the
	compile-time prefix as PREFIX to the compilations.

	* bonobo/bonobo-ui-main.c (do_low_level_init): On Win32, register