@@ -1,3 +1,12 @@
+2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_pre_args_parse),
+	(bonobo_ui_gtk_post_args_parse),
+	(bonobo_ui_gtk_module_get_goption_group),
+	(bonobo_ui_gtk_module_info_get): Fix leaks introduced by the
+	move to GOption. (Christian Perch) Closes bug #326237.
+	* configure.in: Bump version.
+
 2006-01-06  Abel Cheung  <maddog@linuxhall.org>
 
 	* configure.in: Added "mk" to ALL_LINGUAS.
